--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   path: ^1.9.1
   shared_preferences: ^2.5.3
   table_calendar: ^3.2.0
+  timeago: ^3.2.2
 
 dev_dependencies:
   flutter_test:
