--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   shared_preferences: ^2.5.3
   table_calendar: ^3.2.0
   timeago: ^3.2.2
+  flutter_sliding_box: ^1.1.5
 
 dev_dependencies:
   flutter_test:
