--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   timeago: ^3.2.2
   flutter_sliding_box: ^1.1.5
   flutter_launcher_icons: ^0.14.3
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
